fix image overflowing bottom of div

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ img.place {
   border: none;
 }
 
-div.place {
+.clear {
   clear: both;
 }
 
